Support full text search on pageCache fields